--- a/CuadernosPy/01-Python-Cadenas.ipynb
+++ b/CuadernosPy/01-Python-Cadenas.ipynb
@@ -1566,7 +1566,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se declara la variable A y se imprime su valor\n",
     "\n",
     "A = \"1\"\n",
     "print(A)"
@@ -1626,7 +1626,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se declara la variable A y se imprime su valor\n",
     "\n",
     "B = \"2\"\n",
     "print(B)"
@@ -1686,7 +1686,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se declara la variable C que corresponde a la suma de las dos variables anteriormente asignadas\n",
     "\n",
     "C = A + B\n",
     "\n",
@@ -1746,7 +1746,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se asigna el valor de D para ejemplificar en el print el metodo de slicing\n",
     "\n",
     "D = \"ABCDEFG\"\n",
     "print(D[0:3])"
@@ -1805,7 +1805,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se asigna el valor de E para ejemplificar en el print el metodo de stride\n",
     "\n",
     "E = 'clocrkr1e1c1t'\n",
     "\n",
@@ -1866,7 +1866,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# imprimimos el \\\n",
     "print(\"\\\\\")"
    ],
    "metadata": {
@@ -1923,7 +1923,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se hace el uso de la funcion previamente vista .upper()\n",
     "\n",
     "F = \"You are wrong\"\n",
     "F.upper()"
@@ -1985,7 +1985,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se hace el uso de la funcion previamente vista .find()\n",
     "\n",
     "G = \"Mary had a little lamb Little lamb, little lamb Mary had a little lamb \\\n",
     "Its fleece was white as snow And everywhere that Mary went Mary went, Mary went \\\n",
@@ -2050,7 +2050,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se hace el uso de la funcion previamente vista .replace()\n",
     "G.replace(\"Mary\", \"Bob\")"
    ],
    "metadata": {
