--- a/CuadernosPy/03-Python-Listas.ipynb
+++ b/CuadernosPy/03-Python-Listas.ipynb
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Crea una lista con los elemetos que piden\n",
     "a_list = [1, 'hello', [1, 2, 3] , True]\n",
     "a_list"
    ],
@@ -1129,7 +1129,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# usa el index para acceder a el indice que pide\n",
     "a_list[1]"
    ],
    "metadata": {
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# usa el index para acceder a el indice que pide\n",
     "a_list[1:4]"
    ],
    "metadata": {
@@ -1249,7 +1249,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Usa la funcion de suma para demostrar que sirve para hacer suma de las listas\n",
     "\n",
     "A = [1, 'a']\n",
     "B = [2, 1, 'd']\n",
