--- a/CuadernosPy/04-Python-Conjuntos.ipynb
+++ b/CuadernosPy/04-Python-Conjuntos.ipynb
@@ -1159,7 +1159,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# se usa la funcion vista set para crear un set\n",
     "\n",
     "set(['rap','house','electronic music','rap'])"
    ],
@@ -1220,7 +1220,10 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# La suma de la lista A da 6 porque suma todos sus elementos: 1 + 2 + 2 + 1 = 6.\n",
+    "\n",
+    "# La suma del conjunto B da 3 porque los conjuntos eliminan duplicados, así que solo quedan los elementos únicos:\n",
+    "# 1 y 2. Por lo tanto, 1 + 2 = 3.\n",
     "\n",
     "A = [1, 2, 2, 1]\n",
     "B = set([1, 2, 2, 1])\n",
@@ -1282,7 +1285,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se crean sets con los nombres de las bandas para luego hacer una union y evidenciar que no se repiten los elementos\n",
     "\n",
     "album_set1 = set([\"Thriller\", 'AC/DC', 'Back in Black'])\n",
     "album_set2 = set([ \"AC/DC\", \"Back in Black\", \"The Dark Side of the Moon\"])\n",
@@ -1347,7 +1350,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# como se uso el union para el set 1 y 2 pues es correcto que el 3 sea un subconjunto\n",
     "\n",
     "album_set1.issubset(album_set3)"
    ],
