--- a/CuadernosPy/05-Python-Diccionarios.ipynb
+++ b/CuadernosPy/05-Python-Diccionarios.ipynb
@@ -818,8 +818,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
-    "\n",
+    "# Uso la funcion keys para ver las keys del diccionario\n",
     "\n",
     "soundtrack_dic.keys()"
    ],
@@ -880,7 +879,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# uso values para ver los values de los keys que vi en el paso anterior\n",
     "soundtrack_dic.values()"
    ],
    "metadata": {
@@ -968,7 +967,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# ceo ahora yo mi diccionario\n",
     "album_sales_dict = {\"The Bodyguard\":50, \"Back in Black\":50, \"Thriller\":65}"
    ],
    "metadata": {
@@ -1018,7 +1017,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# miro si preguntado por el key me da la informacion sin mas\n",
     "album_sales_dict[\"Thriller\"]"
    ],
    "metadata": {
@@ -1078,7 +1077,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# miro los keys como al inicio\n",
     "\n",
     "album_sales_dict.keys()"
    ],
@@ -1139,7 +1138,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# miro los values como antes\n",
     "\n",
     "album_sales_dict.values()"
    ],
