--- a/CuadernosPy/06-Python-Condiciones.ipynb
+++ b/CuadernosPy/06-Python-Condiciones.ipynb
@@ -1307,7 +1307,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# creo una variable en este caso mayor a la condicion para validar el ejemplo que sea mayor\n",
     "\n",
     "rating = 8.5\n",
     "if rating > 8:\n",
@@ -1368,7 +1368,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# al codigo anterior le asigno el caso de fallo de la condicion (else)\n",
     "\n",
     "rating = 8.5\n",
     "if rating > 8:\n",
@@ -1430,7 +1430,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# hago la condicion if que pide en una sola linea haciendo uso de or\n",
     "\n",
     "album_year = 1979\n",
     "\n",
