--- a/CuadernosPy/07-Python-Bucles.ipynb
+++ b/CuadernosPy/07-Python-Bucles.ipynb
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# hago un bucle for sencillo que usa range para ir en el rango que me piden\n",
     "\n",
     "for i in range(-5, 6):\n",
     "    print(i)"
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# imprimo los elementos uno por uno usando el for\n",
     "\n",
     "Genres = ['rock', 'R&B', 'Soundtrack', 'R&B', 'soul', 'pop']\n",
     "for Genre in Genres:\n",
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# imprimo los elementos uno por uno usando el for\n",
     "\n",
     "squares=['red', 'yellow', 'green', 'purple', 'blue']\n",
     "for square in squares:\n",
@@ -805,11 +805,17 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Primero se define la lista\n",
     "\n",
     "PlayListRatings = [10, 9.5, 10, 8, 7.5, 5, 10, 10]\n",
+    "\n",
+    "# se asigna una variable\n",
     "i = 1\n",
+    "\n",
+    "# y el rating\n",
     "Rating = PlayListRatings[0]\n",
+    "\n",
+    "# se hace el bucle para que cada que se cumpla la condicion se almacene en lalista y en caso tal que n acabe el bucle\n",
     "while(Rating >= 6):\n",
     "    print(Rating)\n",
     "    Rating = PlayListRatings[i]\n",
@@ -874,7 +880,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se hace un proceso similar al punto anterior pero en este caso no hace la regla cuando la palabra sea orange\n",
     "\n",
     "squares = ['orange', 'orange', 'purple', 'blue ', 'orange']\n",
     "new_squares = []\n",
