--- a/CuadernosPy/08-Python-Funciones.ipynb
+++ b/CuadernosPy/08-Python-Funciones.ipynb
@@ -1825,7 +1825,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se declara la fncion div que es la division de a y b\n",
     "\n",
     "def div(a, b):\n",
     "    return(a/b)"
@@ -1876,7 +1876,10 @@
   {
    "cell_type": "code",
    "source": [
-    "# Usa la función con para la siguiente pregunta\n\ndef con(a, b):\n    return(a + b)"
+    "# Se declara la fncion div que es la suma de a y b\n",
+    "\n",
+    "def con(a, b):\n",
+    "    return(a + b)"
    ],
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -1910,7 +1913,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# se hace uso de la funcion definida previamente\n",
     "con(2, 2)"
    ],
    "metadata": {
@@ -1970,7 +1973,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# se hace el uso de la funcion de ante definida y como lo vimos en un libro pasado funciona la adicionde las listas\n",
     "\n",
     "con(['a', 1], ['b', 1])"
    ],
