--- a/CuadernosPy/09-Python-Clases.ipynb
+++ b/CuadernosPy/09-Python-Clases.ipynb
@@ -413,7 +413,25 @@
   {
    "cell_type": "code",
    "source": [
-    "# Crear la clase Circle\n\nclass Circle(object):\n    \n    # Constructor\n    def __init__(self, radius=3, color='blue'):\n        self.radius = radius\n        self.color = color \n    \n    # Method\n    def add_radius(self, r):\n        self.radius = self.radius + r\n        return(self.radius)\n    \n    # Method\n    def drawCircle(self):\n        plt.gca().add_patch(plt.Circle((0, 0), radius=self.radius, fc=self.color))\n        plt.axis('scaled')\n        plt.show()  "
+    "# Crear la clase Circle\n",
+    "\n",
+    "class Circle(object):\n",
+    "\n",
+    "    # Constructor: inicializa el radio y el color del círculo\n",
+    "    def __init__(self, radius=3, color='blue'):\n",
+    "        self.radius = radius\n",
+    "        self.color = color\n",
+    "\n",
+    "    # Método para aumentar el radio del círculo en r unidades\n",
+    "    def add_radius(self, r):\n",
+    "        self.radius = self.radius + r\n",
+    "        return(self.radius)\n",
+    "\n",
+    "    # Método para dibujar el círculo usando matplotlib\n",
+    "    def drawCircle(self):\n",
+    "        plt.gca().add_patch(plt.Circle((0, 0), radius=self.radius, fc=self.color))\n",
+    "        plt.axis('scaled')\n",
+    "        plt.show()"
    ],
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -963,7 +981,20 @@
   {
    "cell_type": "code",
    "source": [
-    "# Crear una nueva clase Rectangle para construir un objeto rectangulo\n\nclass Rectangle(object):\n    \n    # Constructor\n    def __init__(self, width=2, height=3, color='r'):\n        self.height = height \n        self.width = width\n        self.color = color\n    \n    # Method\n    def drawRectangle(self):\n        plt.gca().add_patch(plt.Rectangle((0, 0), self.width, self.height ,fc=self.color))\n        plt.axis('scaled')\n        plt.show()"
+    "# Crear una nueva clase Rectangle para construir un objeto rectangulo\n",
+    "\n",
+    "class Rectangle(object):\n",
+    "    # Constructor: inicializa ancho, alto y color del rectángulo\n",
+    "    def __init__(self, width=2, height=3, color='r'):\n",
+    "        self.height = height\n",
+    "        self.width = width\n",
+    "        self.color = color\n",
+    "\n",
+    "    # Método para dibujar el rectángulo usando matplotlib\n",
+    "    def drawRectangle(self):\n",
+    "        plt.gca().add_patch(plt.Rectangle((0, 0), self.width, self.height, fc=self.color))\n",
+    "        plt.axis('scaled')\n",
+    "        plt.show()"
    ],
    "metadata": {
     "collapsed": true,
