--- a/CuadernosPy/Practico_Bono_1.ipynb
+++ b/CuadernosPy/Practico_Bono_1.ipynb
@@ -42,10 +42,11 @@
    },
    "source": [
     "def lesser_of_two_evens(a, b):\n",
+    "    # Verifica si ambos números son pares\n",
     "    if a % 2 == 0 and b % 2 == 0:\n",
-    "        return min(a, b)\n",
+    "        return min(a, b)  # Devuelve el menor si ambos son pares\n",
     "    else:\n",
-    "        return max(a, b)\n"
+    "        return max(a, b)  # Devuelve el mayor si alguno es impar\n"
    ],
    "outputs": [],
    "execution_count": 1
@@ -128,7 +129,9 @@
    },
    "source": [
     "def animal_crackers(text):\n",
+    "    # Divide el texto en una lista de palabras\n",
     "    palabras = text.split()\n",
+    "    # Compara la primera letra de ambas palabras (en minúsculas)\n",
     "    return palabras[0][0].lower() == palabras[1][0].lower()"
    ],
    "outputs": [],
@@ -214,6 +217,7 @@
    },
    "source": [
     "def makes_twenty(n1, n2):\n",
+    "    # Retorna True si alguno de los números es 20 o si la suma es 20\n",
     "    return n1 == 20 or n2 == 20 or (n1 + n2 == 20)"
    ],
    "outputs": [],
@@ -335,9 +339,12 @@
    },
    "source": [
     "def old_macdonald(name):\n",
+    "    # Verifica si la longitud de la cadena es mayor a 3\n",
     "    if len(name) > 3:\n",
+    "        # Capitaliza los primeros tres caracteres y luego el resto\n",
     "        return name[:3].capitalize() + name[3:].capitalize()\n",
     "    else:\n",
+    "        # Si la cadena es corta, solo la capitaliza\n",
     "        return name.capitalize()"
    ],
    "outputs": [],
@@ -404,6 +411,7 @@
    },
    "source": [
     "def master_yoda(text):\n",
+    "    # Divide el texto en palabras, invierte el orden y las une con espacios\n",
     "    return ' '.join(text.split()[::-1])"
    ],
    "outputs": [],
@@ -516,10 +524,13 @@
    },
    "source": [
     "def has_33(nums):\n",
+    "    # Recorre la lista hasta el penúltimo elemento\n",
     "    for i in range(len(nums) - 1):\n",
+    "        # Verifica si el elemento actual y el siguiente son ambos 3\n",
     "        if nums[i] == 3 and nums[i + 1] == 3:\n",
     "            return True\n",
-    "    return False\n"
+    "    # Si no encuentra dos 3 seguidos, retorna False\n",
+    "    return False"
    ],
    "outputs": [],
    "execution_count": 17
@@ -713,14 +724,17 @@
     }
    },
    "source": [
+    "#Este código define una función que simula la suma de cartas en el juego Blackjack\n",
+    "\n",
     "def blackjack(a, b, c):\n",
+    "    # uma tres números; si el total es menor o igual a 21\n",
     "    total = a + b + c\n",
     "    if total <= 21:\n",
-    "        return total\n",
-    "    elif 11 in (a, b, c) and total - 10 <= 21:\n",
+    "        return total # lo retorna\n",
+    "    elif 11 in (a, b, c) and total - 10 <= 21: # Si el total supera 21 pero hay un 11 y al restar 10 el total es 21 o menos, retorna el total ajustado.\n",
     "        return total - 10\n",
     "    else:\n",
-    "        return 'BUST'"
+    "        return 'BUST' # Si ninguna condición se cumple, retorna 'BUST'."
    ],
    "outputs": [],
    "execution_count": 24
