--- a/CuadernosPy/02-Python-Tuplas.ipynb
+++ b/CuadernosPy/02-Python-Tuplas.ipynb
@@ -1400,7 +1400,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# usamos la funcion que Return the number of items in a container. segun la doc oficial\n",
     "len(genres_tuple)"
    ],
    "metadata": {
@@ -1477,7 +1477,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# accedemos a el indice con los brackets\n",
     "genres_tuple[3]"
    ],
    "metadata": {
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Utiliza el slicing para obtener los índices 3, 4 y 5\n",
     "genres_tuple[3:6]"
    ],
    "metadata": {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Utiliza el slicing para obtener los primeros dos elementos de la tupla\n",
     "genres_tuple[0:2]"
    ],
    "metadata": {
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se hace el uso de la funcion previamente vista .index()\n",
     "genres_tuple.index(\"disco\")"
    ],
    "metadata": {
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
+    "# Se hace el uso de la funcion previamente vista sorted()\n",
     "C_tuple = (-5, 1, -3)\n",
     "C_list = sorted(C_tuple)\n",
     "C_list"
